--- a/Reconstruction/RecTracker/CMakeLists.txt
+++ b/Reconstruction/RecTracker/CMakeLists.txt
@@ -4,18 +4,17 @@
 gaudi_subdir(RecTracker v1r0)
 
 # this declaration will not be needed in the future
-gaudi_depends_on_subdirs(GaudiAlg FWCore Sim/SimG4Common Sim/SimG4Interface Detector/DetInterface Reconstruction/RecInterface)
+gaudi_depends_on_subdirs(GaudiAlg FWCore Detector/DetInterface Sim/SimG4Interface Reconstruction/RecInterface)
 
-find_package(DD4hep)
-find_package(HepMC)
 find_package(Geant4)
 find_package(FCCEDM)
 find_package(PODIO)
+find_package(HepMC)
+find_package(DD4hep COMPONENTS DDG4 DDSegmentation DDRec REQUIRED)
+find_package(tricktrack)
 find_package(ROOT REQUIRED COMPONENTS Geom)
 find_package(ACTS COMPONENTS Core  TGeoPlugin DD4hepPlugin)
 
-#set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
-#include( DD4hep )
 
 
 gaudi_install_headers(RecTracker)
@@ -27,7 +26,7 @@ gaudi_add_library(TrackingUtils
 
 gaudi_add_module(RecTracker
                  src/components/*.cpp
-                 INCLUDE_DIRS DD4hep Geant4 FWCore SimG4Common SimG4Interface  ROOT RecInterface TrackingUtils ACTS
+                 INCLUDE_DIRS ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface RecInterface TrackingUtils ACTS ${tricktrack_INCLUDE_DIR}
                  LINK_LIBRARIES ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep TrackingUtils ACTS::ACTSCore ACTS::ACTSDD4hepPlugin)
 
 
@@ -41,13 +40,21 @@ include(CTest)
 
 gaudi_add_test(FastDigiTest
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-			         FRAMEWORK options/fastDigiTest.py
-			         DEPENDS Examples.GeantFullSimTrackerHits)
+			         FRAMEWORK options/fastDigiTest.py)
 
 gaudi_add_test(CombinatorialTrackSeeding
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-			         FRAMEWORK options/combinatorialTrackSeedingTest.py
-			         DEPENDS Examples.GeantFullSimTrackerHits)
+			         FRAMEWORK options/combinatorialTrackSeedingTest.py)
+
+gaudi_add_test(GeantFullSimWithGeantino
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               FRAMEWORK options/geant_fullsim_pgun_geantino.py)
+
+gaudi_add_test(TrickTrackSeeding
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+			         FRAMEWORK options/TrickTrackSeedingTest.py
+			         DEPENDS GeantFullSimWithGeantino)
+
 
 # TODO: to be re-enabled once ACTS DD4hepPlugin is up to date
 #gaudi_add_test(ExtrapolationTest
